# wtf-bot

./: .cfignore  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Procfile  README.md  TA_Short.csv  config.py  dev-requirements.in  dev-requirements.txt  manifest.yml  pyproject.toml  pytest.ini  redeploy.sh  requirements.in  requirements.txt  slack_app_config.yaml  test_acronyms.csv  test_wtf.py  tests_config.py  tests_wtf.py  tests_wtf_context_notes.py  tests_wtf_edge_case.py  wtf.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  cicd.yml  codeql-analysis.yml  codeql.yml  deploy.yml  redeploy.yml
tests/: test_config.py  test_wtf.py
wtf_bot/: config.py  wtf.py
