[tool.poetry]
name = "wtf-bot"
version = "1.1.0"
description = ""
authors = ["Patrick Bateman <patrick.bateman@va.gov>", "Karl Brown <karl.brown1@va.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pytest-cov = "^5.0.0"
safety = "^3.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".pytest_cache",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["E731"]
select = ["A", "B", "C", "E", "F", "I", "UP", "PL", "PTH", "ERA", "RUF", "TRY"]
ignore = ["PLR2004", "E501", "COM812"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"